--- a/style.css
+++ b/style.css
@@ -58,3 +58,14 @@ head{
         color: black;
 
 }
+
+
+
+#foodImages {
+
+
+                        max-width: 100%;
+                        height: auto;
+
+
+}
