--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ head{
 
 
                         max-width: 100%;
-                        height: auto;
+                        /* height: auto; */
+                        max-height: 100%;
 
 
 }
