--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body {
 
 #theButton {
 
-            margin: 0 auto;
+            /* margin: 0 auto;
             width: 0%;
 
-            display: block;
+            display: block; */
+            text-align: center;
                         
                          
 
