--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 #subHead{
 
         text-align: center;
+        color: rgb(247, 189, 29);
 
 
 }
@@ -68,6 +69,15 @@ head{
                         max-width: 100%;
                         /* height: auto; */
                         max-height: 100%;
+
+
+}
+
+
+#break1{
+
+
+                color:  rgba(255, 255, 255, 0.897);
 
 
 }
