--- a/style.css
+++ b/style.css
@@ -49,15 +49,16 @@ body {
                         display: block;
                          margin-left: auto;
                         margin-right: auto;
+                        
                          
                         
 
 }
 
 
-head{
+header{
 
-        color: black;
+        background-color: black;
 
 }
 
