--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header{
 
                         text-align: center;
                         background-color: forestgreen;
+                        color: white;
 
 }
 
