--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 
-            background-color: rgba(255, 255, 255, 0.897);
+            /* background-color: rgba(255, 255, 255, 0.897); */
+            background-image: url(./img/oliveBackground.jpg);
 
 
 }
