--- a/style.css
+++ b/style.css
@@ -111,3 +111,12 @@ header{
                 float: right;
 
 }
+
+#maps1 {
+
+
+        display: block;
+        margin: auto;
+        text-align: center;
+
+}
