--- a/style.css
+++ b/style.css
@@ -133,12 +133,12 @@ header{
 
 
 
-/* 
+
 * {
         margin:0;
         padding:0;
         border:0;
-      } */
+      } 
       
       @keyframes slide {
         from { left: 100%;}
@@ -155,24 +155,26 @@ header{
         width:100%;
         height:120px;
         line-height:120px;
-        overflow:hidden;
+        /* overflow:hidden; */
         position:relative;
+        /* overflow: scroll; */
       }
       
       #text {
         position:absolute;
         top:0;
         left:0;
-        width:100%;
-        height:120px;
+        width:300%;
+        height:75px; 
         font-size:30px;
         animation-name: slide;
-        animation-duration: 10s;
+        animation-duration: 19s;
         animation-timing-function: linear;
         animation-iteration-count: infinite;
         -webkit-animation-name: slide;
-        -webkit-animation-duration: 10s;
+        -webkit-animation-duration: 19s;
         -webkit-animation-timing-function:linear;
         -webkit-animation-iteration-count: infinite;
+        
       }
 
